Added icon grid with hover effect and profile summary section

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -32,7 +32,7 @@
 
         h1 {
             font-size: 8rem;
-            margin-top: -100px;
+            margin-top: -20px;
             letter-spacing: -0.4px;
             text-transform: uppercase;
             padding-top: 0px;
@@ -71,7 +71,7 @@
         /* Flexbox Layout for Icon Grid and Profile Summary */
         .main-container {
             display: flex;
-            justify-content: space-between;
+<!--            justify-content: space-between;-->
             align-items: flex-start;
             width: 80%;
             margin-top: 50px;
@@ -101,17 +101,13 @@
 
         /* Profile Summary Section */
         .profile-summary {
-            font-family: 'Poppins', sans-serif;  /* Change this to your preferred font */
-            font-size: 1.2rem;
-            font-weight: 400;
+            font-family: 'Montserrat', sans-serif;  /* Change this to your preferred font */
+            font-size: 2rem;
+            font-weight: 300;
             width: 70%;
-            padding: 40px;
+            padding-top: 100px;
             border-radius: 10px;
 
-        }
-
-        .profile-summary h2 {
-            margin-bottom: 15px;
         }
 
         body.dark-mode .icon-grid a {
@@ -149,7 +145,7 @@
     </div>
 
     <!-- Profile Summary -->
-    <div class="profile-summary">\
+    <div class="profile-summary">
         <p>Short bio or profile summary goes here. You can include your skills, interests, or any important details about yourself.</p>
     </div>
 </div>
