Added icons for social handled

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -58,7 +58,26 @@
     <p class="typewriter">Network Software Engineer / Del Analyst / Tech Enthusiast</p>
 </div>
 
-
+<div class="social-icons">
+    <a href="https://linkedin.com" target="_blank" aria-label="LinkedIn" class="icon linkedin">
+        <i class="fab fa-linkedin-in"></i>
+    </a>
+    <a href="https://leetcode.com" target="_blank" aria-label="LeetCode" class="icon leetcode">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/LeetCode_logo_black.png" alt="LeetCode Icon" />
+    </a>
+    <a href="https://dev.to" target="_blank" aria-label="Dev.to" class="icon devto">
+        <i class="fab fa-dev"></i>
+    </a>
+    <a href="https://hashnode.com" target="_blank" aria-label="Hashnode" class="icon hashnode">
+        <i class="fab fa-hashnode"></i>
+    </a>
+    <a href="https://github.com" target="_blank" aria-label="GitHub" class="icon github">
+        <i class="fab fa-github"></i>
+    </a>
+    <a href="https://codechef.com" target="_blank" aria-label="CodeChef" class="icon codechef">
+        <img src="https://s3.amazonaws.com/codechef_shared/sites/all/themes/abessive/logo.svg" alt="CodeChef Icon" />
+    </a>
+</div>
 
 <script src="/js/script.js"></script>
 
